--- a/lighthouse-core/lib/locales/en-US.json
+++ b/lighthouse-core/lib/locales/en-US.json
@@ -4,7 +4,7 @@
   },
   "lighthouse-core/audits/bootup-time.js | failureTitle": {
     "message": "JavaScript boot-up time is too high",
-    "description": "Show to users as the title of the audit when it is in a failing state."
+    "description": "Shown to users as the title of the audit when it is in a failing state."
   },
   "lighthouse-core/audits/bootup-time.js | description": {
     "message": "Consider reducing the time spent parsing, compiling, and executing JS. You may find delivering smaller JS payloads helps with this. [Learn more](https://developers.google.com/web/tools/lighthouse/audits/bootup)."
@@ -44,7 +44,7 @@
   },
   "lighthouse-core/audits/byte-efficiency/total-byte-weight.js | failureTitle": {
     "message": "Has enormous network payloads",
-    "description": "Show to users as the title of the audit when it is in a failing state."
+    "description": "Shown to users as the title of the audit when it is in a failing state."
   },
   "lighthouse-core/audits/byte-efficiency/total-byte-weight.js | description": {
     "message": "Large network payloads cost users real money and are highly correlated with long load times. [Learn more](https://developers.google.com/web/tools/lighthouse/audits/network-payloads)."
@@ -81,7 +81,7 @@
   },
   "lighthouse-core/audits/byte-efficiency/uses-long-cache-ttl.js | failureTitle": {
     "message": "Uses inefficient cache policy on static assets",
-    "description": "Show to users as the title of the audit when it is in a failing state."
+    "description": "Shown to users as the title of the audit when it is in a failing state."
   },
   "lighthouse-core/audits/byte-efficiency/uses-long-cache-ttl.js | description": {
     "message": "A long cache lifetime can speed up repeat visits to your page. [Learn more](https://developers.google.com/web/tools/lighthouse/audits/cache-policy)."
@@ -127,7 +127,7 @@
   },
   "lighthouse-core/audits/dobetterweb/dom-size.js | failureTitle": {
     "message": "Uses an excessive DOM size",
-    "description": "Show to users as the title of the audit when it is in a failing state."
+    "description": "Shown to users as the title of the audit when it is in a failing state."
   },
   "lighthouse-core/audits/dobetterweb/dom-size.js | description": {
     "message": "Browser engineers recommend pages contain fewer than ~1,500 DOM nodes. The sweet spot is a tree depth < 32 elements and fewer than 60 children/parent element. A large DOM can increase memory usage, cause longer [style calculations](https://developers.google.com/web/fundamentals/performance/rendering/reduce-the-scope-and-complexity-of-style-calculations), and produce costly [layout reflows](https://developers.google.com/speed/articles/reflow). [Learn more](https://developers.google.com/web/tools/lighthouse/audits/dom-size)."
@@ -149,7 +149,7 @@
   },
   "lighthouse-core/audits/font-display.js | failureTitle": {
     "message": "Text is invisible while webfonts are loading",
-    "description": "Show to users as the title of the audit when it is in a failing state."
+    "description": "Shown to users as the title of the audit when it is in a failing state."
   },
   "lighthouse-core/audits/font-display.js | description": {
     "message": "Leverage the font-display CSS feature to ensure text is user-visible while webfonts are loading. [Learn more](https://developers.google.com/web/updates/2016/02/font-display)."
@@ -159,7 +159,7 @@
   },
   "lighthouse-core/audits/mainthread-work-breakdown.js | failureTitle": {
     "message": "Has significant main thread work",
-    "description": "Show to users as the title of the audit when it is in a failing state."
+    "description": "Shown to users as the title of the audit when it is in a failing state."
   },
   "lighthouse-core/audits/mainthread-work-breakdown.js | description": {
     "message": "Consider reducing the time spent parsing, compiling and executing JS. You may find delivering smaller JS payloads helps with this."
